--- a/style.css
+++ b/style.css
@@ -1,9 +1,40 @@
-/* Global Styles */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+  }
+
+  .sidebar {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .sidebar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+  }
+  
+  .sidebar li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+
+  .sidebar a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .sidebar a:hover {
+    text-decoration: underline;
+  }
+
+  .content {
+    padding: 20px;
+    margin-left: 200px; /* Same width as the sidebar */
   }
   
   .container {
