--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.home {
+  color: #fff;
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(45deg,#4287f5, #7659e6, #9c56d8, #bf52c4, #d84ead);
+    background-size: 622% 622%;
+    animation: color 10s ease-in-out infinite;
+}
+
+@keyframes color {
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0 50%;
+    }
+  }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
