--- a/style.css
+++ b/style.css
@@ -162,7 +162,12 @@ body {
     background-color: #f1f1f1;
     height: 100%;
     position: fixed;
-    overflow-y: scroll;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
   }
 
   .sidebar ul {
