--- a/style.css
+++ b/style.css
@@ -187,6 +187,20 @@ body {
     text-decoration: none;
   }
 
+  .sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
   p {
     font-weight: bold;
   }
