--- a/style.css
+++ b/style.css
@@ -95,10 +95,8 @@ body {
   /* Main Styles */
   
   main {
-    /*padding: 20px;*/
-    margin-left: 200px; 
-  font-size: 20px; 
-  padding: 0px 10px;
+    padding: 20px;
+
   }
   
   main p {
