--- a/style.css
+++ b/style.css
@@ -218,6 +218,11 @@ body {
   padding-left: 8px;
 }
 
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+  }
+
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
