--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+  background-color: green;
   }
   @keyframes color {
     0% {
