--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
     background-color: #333;
     color: #fff;
     padding: 20px;
-    text-align: center; /* Center the content horizontally */
+    text-align: center; 
   }
   
   header h1 {
@@ -115,7 +115,7 @@ body {
     color: #fff;
     padding: 20px;
     margin-top: 40px;
-    text-align: center; /* Center the content horizontally */
+    text-align: center; 
   }
   
   .footer-container {
