--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     padding: 0;
   
   }
+
+.home ul {
+  position: fixed;
+
   @keyframes color {
     0% {
       background-position: 0 50%;
@@ -36,6 +40,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    position: fixed;
     
   }
   
@@ -163,7 +168,7 @@ body {
     width: 200px;
     background-color: #f1f1f1;
     height: 100%;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     
     overflow-x: hidden;
