--- a/style.css
+++ b/style.css
@@ -201,15 +201,14 @@ footer {
   }
 
   .sidebar {
-    width: 0;
-
+    width: 200px;
+    background-color: #f1f1f1;
     height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: 0.5s;
+    position: absolute;
+    z-index: 1;
+    
     overflow-x: hidden;
-    padding-top: 60px;
+    padding-top: 20px;
   }
   
 
@@ -231,7 +230,6 @@ footer {
   .sidebar ul li a {
     text-decoration: none;
   }
-
 
   p {
     font-weight: bold;
