--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
 
 /* Global Styles */
 body {
+  font-family: 'Arial', sans-serif;
+  transition: background-color 0.5s, color 0.5s;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    /*font-family: Arial, sans-serif;*/
     background-image: url('background.jpg'); /* replace 'background.jpg' with your image path */
     background-size: cover;
     background-position: center;
