--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* Global Styles */
 body {
-    font-color: #0c192c;
+    color: #0c192c;
     Background-color: lightblue;
     margin: 0;
     padding: 0;
