--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 /* Global Styles */
 body {
-    color: #0c192c;
-    Background-color: lightblue;
+    font-color: white;
+    Background-color: black;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
