--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer {
     width: 200px;
     background-color: #f1f1f1;
     height: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     
     overflow-x: hidden;
