--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Global Styles */
 body {
     color: white;
-    Background-color: lightblue;
+    Background-color: black;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
