--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ footer {
   /* Footer Styles */
   
   footer {
+    position: fixed;
     background-color: #333;
     color: #fff;
     padding: 20px;
